Archive2/03/0b91e0406120b4/output
main.cpp:3:19: error: static_cast from 'void **' to 'int **' is not allowed
  int  **i_dptr = static_cast<int**>(v_dptr);
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
